  * Fix copyright file to mention nusoap.
  * Fix location of Vcs-Bzr: sources repository.
  * Fix problem in use-snoopy-from-distro.dpatch containing .rej changes.
  * No longer ship copy of nusoap in binary package, adding dependency on
    libnusoap-php instead (Closes: #529575).
  * Add provides tag to control for fusionforge.
  * Change default system name to FusionForge instead of GForge.

  [ Roland Mas ]
  * Fix for symlink attack (CVE-2009-3304).

 -- Roland Mas <lolando@debian.org>  Mon, 23 Nov 2009 13:53:17 +0100

gforge (4.8.1-3) unstable; urgency=low

  * New upstream snapshot from the 4.8 branch.  This includes fixes for
    CVE-2009-3303.
  * Fixed potential hang in install-postfix.sh.
  * Fixed dependency on viewcvs, now called viewvc (closes: #552524).

 -- Roland Mas <lolando@debian.org>  Thu, 12 Nov 2009 14:34:32 +0100

gforge (4.8.1-2) unstable; urgency=low

  * New upstream snapshot from the 4.8 branch.
  * Fixed file conflict between -web-apache2 and -plugin-mediawiki.
  * Bumped Standards-Version to 3.8.3 (no changes).
  * Bumped versioned dependency on debhelper to >= 5.

 -- Roland Mas <lolando@debian.org>  Wed, 14 Oct 2009 14:50:26 +0200

gforge (4.8.1-1) unstable; urgency=low

  * New upstream release.
  * Fixed Postfix configuration for mailing lists.
  * Stop overwriting local config on upgrades for domain_name and
    server_admin.

 -- Roland Mas <lolando@debian.org>  Mon, 21 Sep 2009 08:53:35 +0200

gforge (4.8-3) unstable; urgency=low

  * New upstream snapshot as of SVN r7960.

 -- Roland Mas <lolando@debian.org>  Thu, 27 Aug 2009 10:47:54 +0200

gforge (4.8-2) unstable; urgency=low

  * Upload to Debian unstable, with a new upstream snapshot as of SVN
    r7945.

 -- Roland Mas <lolando@debian.org>  Thu, 06 Aug 2009 11:25:16 +0200

gforge (4.8-1) experimental; urgency=low

  * New upstream release.

 -- Roland Mas <lolando@debian.org>  Fri, 12 Jun 2009 13:44:57 +0200

gforge (4.8~rc2-1) experimental; urgency=low
