@@ -3867,6 +3867,7 @@ tests/func/Site/projects.php -text
 tests/func/Site/top.php -text
 tests/func/Site/trove.php -text
 tests/func/Soap/AllTests.php -text
+tests/func/Soap/checks.php -text
 tests/func/Soap/login.php -text
 tests/func/Soap/usergroup.php -text
 tests/func/Tasks/AllTests.php -text
