@@ -13,8 +13,8 @@
 // Host where selenium-rc is running
 define ('SELENIUM_RC_HOST', 'localhost');
 
-// URL to access the application
-define ('URL', 'http://test.local/');
+// The forge's hostname
+define ('FORGE_HOSTNAME', 'test.local');
 
 // Base URL where FusionForge is installed
 define ('BASE', '');
@@ -26,13 +26,23 @@ define('DB_USER', 'gforge');
 define('DB_PASSWORD', '@@FFDB_PASS@@');
 define('DB_INIT_CMD', 'php '.dirname(__FILE__).'/db_reload.php');
 
-define ('WSDL_URL', URL.'soap/index.php?wsdl');
-
 // this should be an existing user of the forge together with its password
 // (the password should be different from 'xxxxxx')
 define ('EXISTING_USER', 'admin');
-define ('PASSWD_OF_EXISTING_USER', 'myadmin');
+define ('PASSWD_OF_EXISTING_USER', 'xxxxx');
 
 // Enter true when file is configured.
 define('CONFIGURED', false);
+
+//
+// DON'T MODIFY BELOW THIS LINE UNLESS YOU KNOW WHAT YOU DO
+//
+
+// These are deduced from the previous definitions.
+
+// URL to access the application
+define ('URL', 'http://'.FORGE_HOSTNAME.'/');
+
+// WSDL of the forges SOAP API
+define ('WSDL_URL', URL.'soap/index.php?wsdl');
 ?>
